# task-app

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
scripts/: init_db.py
src/task_app/: __init__.py  database.py  main.py
src/task_app/api/: __init__.py  tasks.py
src/task_app/models/: __init__.py  task.py
src/task_app/repositories/: __init__.py  task.py
src/task_app/schemas/: __init__.py  task.py
src/task_app/services/: __init__.py  task.py
tests/: conftest.py  test_api_tasks.py  test_database.py  test_main.py  test_repositories.py  test_schemas.py  test_services.py
